--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
+            background: url('https://wallpaperaccess.com/full/1277431.png') no-repeat center center fixed; /* Cyber-themed background */
+            background-size: cover;
             color: #fff;
             text-align: center;
             margin: 0;
@@ -18,7 +19,7 @@
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.7);
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
